/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id "com.github.ben-manes.versions" version "0.28.0"
}

apply plugin: 'java'
apply plugin: 'jacoco'

repositories {
    mavenLocal()
    mavenCentral()
    jcenter()
}

dependencies {
    compile 'net.java.dev.jna:jna:5.5.0'
    compile 'net.java.dev.jna:jna-platform:5.5.0'
    compile 'org.jline:jline:3.14.1'
    compile 'org.json:json:20190722'
    compile 'info.picocli:picocli-shell-jline3:4.2.0'
    compile 'org.fusesource.jansi:jansi:1.18'
    compile 'org.eclipse.jgit:org.eclipse.jgit:5.7.0.202003110725-r'
    compile 'org.slf4j:slf4j-simple:1.7.9'
    //compile 'org.slf4j:slf4j-api:1.7.1'
//    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.1'
//    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.1'
//    compile group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.1'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0-M1'

    testRuntime 'org.junit.jupiter:junit-jupiter-engine:5.7.0-M1'
    testCompile 'org.junit.jupiter:junit-jupiter-params:5.7.0-M1'
    testCompile 'org.assertj:assertj-core:3.16.1'
    testCompile 'nl.jqno.equalsverifier:equalsverifier:3.2'
    testCompile 'org.mockito:mockito-core:3.3.3'
    testCompile 'org.mockito:mockito-junit-jupiter:3.3.3'
}

tasks.withType(JavaCompile) {
    options.compilerArgs.add("--enable-preview")
}

test {
    useJUnitPlatform()
    jvmArgs("--enable-preview")
}

description = 'micro task'
sourceCompatibility = '14'

jar {
    manifest {
        attributes "Main-Class": "com.andrewauclair.microtask.Main"
    }

    from {
        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
    }
    exclude 'META-INF/*.RSA', 'META-INF/*.SF','META-INF/*.DSA'
}

jacocoTestReport {
    reports {
        xml.enabled true
    }
}